# panda-mcp

./: .dockerignore  .gitignore  README.md  mcp_server.py  pyproject.toml  server.py
src/: __init__.py  app.py
src/core/: __init__.py  base_exchange.py  exchange_factory.py
src/exchanges/: __init__.py  binance.py  bybit.py  hyperliquid.py
src/metrics/: __init__.py  api_client.py  divine_dip.py  jlabs_analytics.py  jlabs_models.py  orderbook.py  orderflow.py
src/tools/: __init__.py
src/utils/: __init__.py  export.py  indicators.py
test/: test_client.py
