[project]
name = "panda-mcp"
version = "0.1.0"
description = "Modular MCP server for cryptocurrency exchange data with support for multiple exchanges"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Zahoor", email = "your.email@example.com"}
]
keywords = ["mcp", "cryptocurrency", "exchange", "binance", "trading", "api"]

dependencies = [
    "fastmcp>=2.11.0",
    "pydantic>=2.0,<2.12",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "pandas>=2.0.0",
    "pandas-ta>=0.4.71b0",
    "python-dotenv>=1.0.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
    "sse-starlette>=1.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
panda-mcp = "panda_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
